src/test/test-models/bad/compound-assign/plus_equals_type_mismatch.stan
generated quantities {
  real x[3] = [1.2, 2.3, 3.3];
  real y[3] = [0, -1, -3];
  x += y;
}
